--- a/model/checkout/demo/demo.html
+++ b/model/checkout/demo/demo.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">
-<title>消费记录</title>
+<title>购物车</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="renderer" content="webkit">
 <meta name="screen-orientation" content="portrait">
 <meta name="x5-orientation" content="portrait">
 <meta name="format-detection" content="telephone=no,email=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-title" content="消费记录">
+<meta name="apple-mobile-web-app-title" content="购物车">
 
 <meta name="keywords" content="">
 <meta name="description" content="">
@@ -21,7 +21,7 @@
 <meta http-equiv="expires" content="0">
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT">
 <meta http-equiv="pragma" content="no-cache">
-<script type="application/javascript" src="../../js/fastclick.js"></script> 
+<script type="application/javascript" src="../../../js/fastclick.js"></script> 
 <script type="application/javascript">
 	function setFontSize(){
         document.documentElement.style.fontSize=20*Math.sqrt(window.innerWidth/320)+'px';
@@ -64,6 +64,11 @@
 											<div class="glb-red layout-td price">
 												20.00元
 											</div>
+											<div class="layout-tr model-btn-group">
+												<input class="model-btn-sm manus glb-for-screener" type="button" value="减去一个" data-blz-step="10">
+												<input class="model-btn-sm text" type="number" pattern="[0-9]*" value="1" aria-label="请输入要购买商品的数量" data-blz-max="100" data-blz-min="1" data-blz-value-pre="1">
+												<input class="model-btn-sm plus glb-for-screener" type="button" value="增加一个" data-blz-step="10">
+											</div>
 										</div>
 									</div>
 								</div>
@@ -84,6 +89,11 @@
 											<div class="glb-red layout-td price">
 												20.00元
 											</div>
+											<div class="layout-tr model-btn-group">
+												<input class="model-btn-sm manus glb-for-screener" type="button" value="减去一个" data-blz-step="10">
+												<input class="model-btn-sm text" type="number" pattern="[0-9]*" value="1" aria-label="请输入要购买商品的数量" data-blz-max="100" data-blz-min="1" data-blz-value-pre="1">
+												<input class="model-btn-sm plus glb-for-screener" type="button" value="增加一个" data-blz-step="10">
+											</div>
 										</div>
 									</div>
 								</div>
@@ -103,6 +113,11 @@
 										<div class="layout-tr">
 											<div class="glb-red layout-td price">
 												20.00元
+											</div>
+											<div class="layout-tr model-btn-group">
+												<input class="model-btn-sm manus glb-for-screener" type="button" value="减去一个" data-blz-step="10">
+												<input class="model-btn-sm text" type="number" pattern="[0-9]*" value="1" aria-label="请输入要购买商品的数量" data-blz-max="100" data-blz-min="1" data-blz-value-pre="1">
+												<input class="model-btn-sm plus glb-for-screener" type="button" value="增加一个" data-blz-step="10">
 											</div>
 										</div>
 									</div>
@@ -133,6 +148,11 @@
 											<div class="glb-red layout-td price">
 												20.00元
 											</div>
+											<div class="layout-tr model-btn-group">
+												<input class="model-btn-sm manus glb-for-screener" type="button" value="减去一个" data-blz-step="10">
+												<input class="model-btn-sm text" type="number" pattern="[0-9]*" value="1" aria-label="请输入要购买商品的数量" data-blz-max="100" data-blz-min="1" data-blz-value-pre="1">
+												<input class="model-btn-sm plus glb-for-screener" type="button" value="增加一个" data-blz-step="10">
+											</div>
 										</div>
 									</div>
 								</div>
@@ -152,6 +172,11 @@
 										<div class="layout-tr">
 											<div class="glb-red layout-td price">
 												20.00元
+											</div>
+											<div class="layout-tr model-btn-group">
+												<input class="model-btn-sm manus glb-for-screener" type="button" value="减去一个" data-blz-step="10">
+												<input class="model-btn-sm text" type="number" pattern="[0-9]*" value="1" aria-label="请输入要购买商品的数量" data-blz-max="100" data-blz-min="1" data-blz-value-pre="1">
+												<input class="model-btn-sm plus glb-for-screener" type="button" value="增加一个" data-blz-step="10">
 											</div>
 										</div>
 									</div>
@@ -173,6 +198,11 @@
 											<div class="glb-red layout-td price">
 												20.00元
 											</div>
+											<div class="layout-tr model-btn-group">
+												<input class="model-btn-sm manus glb-for-screener" type="button" value="减去一个" data-blz-step="10">
+												<input class="model-btn-sm text" type="number" pattern="[0-9]*" value="1" aria-label="请输入要购买商品的数量" data-blz-max="100" data-blz-min="1" data-blz-value-pre="1">
+												<input class="model-btn-sm plus glb-for-screener" type="button" value="增加一个" data-blz-step="10">
+											</div>
 										</div>
 									</div>
 								</div>
@@ -193,19 +223,19 @@
 			</section>
 		</div>    		
 	</div>
-	<script type="application/javascript" src="../../js/require.js"></script>
+	<script type="application/javascript" src="../../../js/require.js"></script>
 	<script type="application/javascript">
 		+function(){
 			'use strict';
 
 			require.config({
-				baseUrl:'../../js',
+				baseUrl:'../../../js',
 				paths:{
 					'jQuery':'jquery-3.1.0'
 				}	
 			});
 
-			require(['blz-checkout','blz','blz-dialog'],function($){
+			require(['blz-checkout'],function($){
 				'use strict';
 
 				$(document.forms[0]).checkout({
@@ -215,15 +245,11 @@
 					buttonManusSelector:'.manus',
 					inputAmountSelector:'.text',
 					buttonAreaSelector:'.model-btn-area',
-					totalMax:60,
 					onTotalChange:function(e,data){
 						$('#gwc-pay-total').text(data.toFixed(2));
 					},
 					onTheDifference:function(e,data){
 						$('#gwc-pay-total').text(data.toFixed(2));
-					},
-					onOverTotalMax:function(elem){
-						$.weui.tip('超过最大选择金额');
 					}
 				});
 			});
