--- a/model/form-validate/demo/demo1.html
+++ b/model/form-validate/demo/demo1.html
@@ -13,7 +13,7 @@
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Cache-Control" content="no-cache">
 <meta http-equiv="Expires" content="0">
-<script type="application/javascript" src="../../js/fastclick.js"></script> 
+<script type="application/javascript" src="../../../js/fastclick.js"></script> 
 <script type="application/javascript">
 	function setFontSize(){
         document.documentElement.style.fontSize=window.innerWidth/16+'px';
@@ -151,13 +151,13 @@
     </div>
 </form>
 </body>
-<script type="application/javascript" src="../../js/require.js"></script>
+<script type="application/javascript" src="../../../js/require.js"></script>
 <script type="application/javascript">
     +function(){
         'use strict';
         
 		require.config({
-			baseUrl:'../../js',
+			baseUrl:'../../../js',
 			paths:{
 				'jQuery':'jquery-3.1.0'
 			}	
